--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,5 +1,5 @@
 *{
-    background-image: url(../../../../../img/blue-acrylic-texture-background.jpg);
+    background-image: url(../assets/blue-acrylic-texture-background.jpg);
     
 }
 .App-header {
